--- a/_data/tags_de.yml
+++ b/_data/tags_de.yml
@@ -1838,7 +1838,7 @@ Gebrechlichkeit:
 - - 'Direkte und indirekte Auswirkungen von COVID-19 bei gebrechlichen älteren Menschen:
     Interventionen und Empfehlungen'
   - "/studies/2021/10/02/10.3390_jpm11100999.html"
-körperliche Aktivität:
+Körperliche Aktivität:
 - - Auswirkung der COVID-19-Beschränkungen für den Aufenthalt zu Hause auf Stürze
     in einer Gemeinschaft älterer Menschen mit hohem Risiko
   - "/studies/2022/02/04/10.1177-07334648211073607.html"
@@ -1856,6 +1856,12 @@ körperliche Aktivität:
     Alkoholkonsums: Assoziationen mit COVID-19-bezogenem Quarantäneverhalten, Isolation,
     Selbstmordgedanken und körperlicher Aktivität'
   - "/studies/2022/01/13/10.1007_s11469-021-00722-9.html"
+- - Engagement der Gemeinschaft zur Steigerung der körperlichen Aktivität während
+    der Covid-19-Pandemie
+  - "/studies/2021/12/24/10.2991_assehr.k.211223.084_3.html"
+- - 'Häufigkeit der körperlichen Betätigung während der COVID-19-Pandemie: Eine Längsschnitt-Wahrscheinlichkeitserhebung
+    in der US-Bevölkerung'
+  - "/studies/2021/12/27/10.1016_j.pmedr.2021.101680.html"
 - - 'Körperliche Aktivität und depressive Symptome bei in der Gemeinschaft lebenden
     älteren Erwachsenen in der Ära der COVID-19-Pandemie: Eine dreiwellige Cross-Lagged-Studie '
   - "/studies/2022/01/10/10.1016_j.ijdrr.2022.102793.html"
@@ -1873,6 +1879,8 @@ körperliche Aktivität:
 - - Auswirkung von körperlicher Aktivität auf die Stressreaktion bei Menschen ab 65
     Jahren während der COVID-19-Lockdowns
   - "/studies/2022/01/12/10.1111_psyg.12806.html"
+- - 'Waldbaden und körperliche Aktivität als Waffen gegen COVID-19: eine Übersicht'
+  - "/studies/2021/09/21/10.1007_s10311-021-01321-9.html"
 - - Moderate bis intensive körperliche Aktivität bei Jugendlichen in den USA während
     der COVID-19-Pandemie
   - "/studies/2021/12/27/10.1016_j.pmedr.2021.101685.html"
@@ -1886,6 +1894,9 @@ körperliche Aktivität:
 - - 'Psychische Gesundheit und körperliches Aktivitätsniveau während der COVID-19-Pandemie:
     Eine systematische Überprüfung'
   - "/studies/2020/12/15/10.3390_ijerph17249419.html"
+- - 'Covid-19 und die Auswirkungen auf das körperliche Aktivitätsniveau älterer Menschen:
+    Eine systematische Überprüfung'
+  - "/studies/2021/12/23/10.1016_j.exger.2021.111675.html"
 - - Wahrgenommene Einschränkungen während der COVID-19-Pandemie bei älteren Personen
     in der Schweiz
   - "/studies/2022/01/10/10.1007_s16024-021-00364-w.html"
@@ -1914,12 +1925,12 @@ körperliche Aktivität:
 - - Das körperliche Aktivitätsniveau der Studierenden und wie es ihre geistige Gesundheit
     und akademische Leistung während der Covid-19-Pandemie beeinflusst
   - "/studies/2021/12/31/123456789_7100.html"
-- - Das körperliche Aktivitätsniveau der Studierenden und wie es ihre geistige Gesundheit
-    und akademische Leistung während der Covid-19-Pandemie beeinflusst
-  - "/studies/2021/12/31/123456789_7100.html"
 - - Die psychosozialen Vorteile der Sportteilnahme während COVID-19 werden nur teilweise
     durch erhöhte körperliche Aktivität erklärt
   - "/studies/2022/01/11/10.1101_2022.01.11.22269077.html"
+- - '"Wearables on vogue": ein Überblick über die Auswirkungen von Wearables auf die
+    körperliche Aktivität und das sitzende Verhalten während der COVID-19-Pandemie'
+  - "/studies/2022/01/07/10.1007_s11332-021-00885-x.html"
 - - 'COVID-19: Hindernisse für die körperliche Betätigung älterer Erwachsener, eine
     Verschlechterung der Gesundheit oder der Wirtschaftlichkeit?'
   - "/studies/2022/01/23/10.3390-jrfm15020051.html"
@@ -1948,6 +1959,10 @@ körperliche Aktivität:
 - - Die Auswirkungen der COVID-19-Lockdowns auf die menschliche Psychologie und körperliche
     Aktivität; eine raumanaloge Forschungsperspektive
   - "/studies/2022/01/14/10.1017_S1473550421000409.html"
+- - Die Beziehung zwischen körperlicher Aktivität und der Verbesserung des Immunsystems
+    in der Covid-19-Prävention im Dorf Sebelimbingan Rt.03, Pulau Laut Utara District,
+    Kotabaru Regency
+  - "/studies/2021/12/31/JNHS_ISSN_2798-1118.html"
 - - 'Der Zusammenhang zwischen körperlicher Aktivität und psychischer Gesundheit im
     ersten Jahr der COVID-19-Pandemie: eine systematische Untersuchung'
   - "/studies/2022/02/01/10.1186-s12889-022-12590-6.html"
@@ -1968,6 +1983,10 @@ körperliche Aktivität:
 - - 'COVID-19-Pandemie und verminderte körperliche Aktivität: Gibt es einen Einfluss
     auf gesunde und asthmatische Kinder?'
   - "/studies/2021/09/08/10.3389_fped.2021.695703.html"
+- - Women’s Lives Matter - Die dringende Notwendigkeit für Frauen einer optimalen
+    körperlichen Aktivität, um das Risiko und den Schweregrad von COVID-19-Erkrankungen
+    zu reduzieren
+  - "/studies/2021/09/29/10.3390_ijerph181910271.html"
 - - Assoziationen von Ernährungsverhalten und Darmmikrobiota mit dem Risiko von COVID-19
     bei gesunden jungen Erwachsenen in Polen
   - "/studies/2022/01/14/10.3390_nu14020350.html"
@@ -3361,25 +3380,6 @@ Suizidalität:
     Alkoholkonsums: Assoziationen mit COVID-19-bezogenem Quarantäneverhalten, Isolation,
     Selbstmordgedanken und körperlicher Aktivität'
   - "/studies/2022/01/13/10.1007_s11469-021-00722-9.html"
-Körperliche Aktivität:
-- - Engagement der Gemeinschaft zur Steigerung der körperlichen Aktivität während
-    der Covid-19-Pandemie
-  - "/studies/2021/12/24/10.2991_assehr.k.211223.084_3.html"
-- - 'Häufigkeit der körperlichen Betätigung während der COVID-19-Pandemie: Eine Längsschnitt-Wahrscheinlichkeitserhebung
-    in der US-Bevölkerung'
-  - "/studies/2021/12/27/10.1016_j.pmedr.2021.101680.html"
-- - 'Waldbaden und körperliche Aktivität als Waffen gegen COVID-19: eine Übersicht'
-  - "/studies/2021/09/21/10.1007_s10311-021-01321-9.html"
-- - 'Covid-19 und die Auswirkungen auf das körperliche Aktivitätsniveau älterer Menschen:
-    Eine systematische Überprüfung'
-  - "/studies/2021/12/23/10.1016_j.exger.2021.111675.html"
-- - '"Wearables on vogue": ein Überblick über die Auswirkungen von Wearables auf die
-    körperliche Aktivität und das sitzende Verhalten während der COVID-19-Pandemie'
-  - "/studies/2022/01/07/10.1007_s11332-021-00885-x.html"
-- - Die Beziehung zwischen körperlicher Aktivität und der Verbesserung des Immunsystems
-    in der Covid-19-Prävention im Dorf Sebelimbingan Rt.03, Pulau Laut Utara District,
-    Kotabaru Regency
-  - "/studies/2021/12/31/JNHS_ISSN_2798-1118.html"
 Immunität:
 - - Engagement der Gemeinschaft zur Steigerung der körperlichen Aktivität während
     der Covid-19-Pandemie
@@ -4097,10 +4097,22 @@ Azithomycin:
 - - 'Hydroxychloroquin und Azithromycin zur Behandlung von COVID-19: Ergebnisse einer
     offenen nicht-randomisierten klinischen Studie'
   - "/studies/2020/03/20/10.1016_j.ijantimicag.2020.105949.html"
-klinische Studie:
+Klinische Studien:
 - - 'Hydroxychloroquin und Azithromycin zur Behandlung von COVID-19: Ergebnisse einer
     offenen nicht-randomisierten klinischen Studie'
   - "/studies/2020/03/20/10.1016_j.ijantimicag.2020.105949.html"
+- - 'Die klinischen Studien zur Umwidmung von Arzneimitteln für COVID-19 liefern sehr
+    wirksame therapeutische Kombinationen: Lehren aus großen klinischen Studien'
+  - "/studies/2021/11/18/10.3389_fphar.2021.704205.html"
+- - 'Auswirkungen der oralen Zugabe von L-Arginin zur Standardtherapie bei Patienten
+    mit COVID-19: Eine randomisierte, doppelblinde, placebokontrollierte Parallelgruppenstudie.
+    Ergebnisse der ersten Zwischenanalyse'
+  - "/studies/2021/09/09/10.1016_j.eclinm.2021.101125.html"
+- - Riesenfortschritt bei antiviralen Arzneimitteln mit kleinen Molekülen gegen SARS-CoV-2
+  - "/studies/2022/01/01/10.19803_j.1672-8629.2022.01.01.html"
+- - 'Warum körperliche Aktivität in klinischen Studien für COVID-19-Impfstoffe berücksichtigt
+    werden sollte: Ein Fokus auf Risikogruppen'
+  - "/studies/2022/02/07/10.3390-ijerph19031853.html"
 - - 'Auswirkungen einer zweiwöchigen Supplementierung mit 5000 IE gegenüber 1000 IE
     Vitamin D3 auf die Verringerung der Symptome bei Patienten mit leichter bis mittelschwerer
     Covid-19-Erkrankung: Eine randomisierte klinische Studie'
@@ -5351,15 +5363,6 @@ Folat:
     Rolle von Mikronährstoffen bei der Verhütung von Infektionen und der Verringerung
     von Komplikationen bei COVID-19'
   - "/studies/2021/05/05/10.1007_s13668-021-00356-2.html"
-klinische Studien:
-- - 'Die klinischen Studien zur Umwidmung von Arzneimitteln für COVID-19 liefern sehr
-    wirksame therapeutische Kombinationen: Lehren aus großen klinischen Studien'
-  - "/studies/2021/11/18/10.3389_fphar.2021.704205.html"
-- - Riesenfortschritt bei antiviralen Arzneimitteln mit kleinen Molekülen gegen SARS-CoV-2
-  - "/studies/2022/01/01/10.19803_j.1672-8629.2022.01.01.html"
-- - 'Warum körperliche Aktivität in klinischen Studien für COVID-19-Impfstoffe berücksichtigt
-    werden sollte: Ein Fokus auf Risikogruppen'
-  - "/studies/2022/02/07/10.3390-ijerph19031853.html"
 Repurposing von Medikamenten:
 - - 'Die klinischen Studien zur Umwidmung von Arzneimitteln für COVID-19 liefern sehr
     wirksame therapeutische Kombinationen: Lehren aus großen klinischen Studien'
@@ -8053,11 +8056,6 @@ Endotheliale Dysfunktion:
     mit COVID-19: Eine randomisierte, doppelblinde, placebokontrollierte Parallelgruppenstudie.
     Ergebnisse der ersten Zwischenanalyse'
   - "/studies/2021/09/09/10.1016_j.eclinm.2021.101125.html"
-Klinische Studie:
-- - 'Auswirkungen der oralen Zugabe von L-Arginin zur Standardtherapie bei Patienten
-    mit COVID-19: Eine randomisierte, doppelblinde, placebokontrollierte Parallelgruppenstudie.
-    Ergebnisse der ersten Zwischenanalyse'
-  - "/studies/2021/09/09/10.1016_j.eclinm.2021.101125.html"
 Risiko einer symptomatischen Infektion:
 - - 'Wirksamkeit der Covid-19-Impfung gegen das Risiko einer symptomatischen Infektion,
     eines Krankenhausaufenthalts und des Todes bis zu 9 Monaten: Eine schwedische
@@ -10609,11 +10607,6 @@ Covid-19-Krankheit:
     und dem Schweregrad der Covid-19-Krankheit in einer Stichprobe der irakischen
     Bevölkerung
   - "/studies/2021/12/31/turkish-journal-of-physiotherapy-and-rehabilitation.html"
-körperliche Aktivität (PA):
-- - Women’s Lives Matter - Die dringende Notwendigkeit für Frauen einer optimalen
-    körperlichen Aktivität, um das Risiko und den Schweregrad von COVID-19-Erkrankungen
-    zu reduzieren
-  - "/studies/2021/09/29/10.3390_ijerph181910271.html"
 Gesundheit und Wellness:
 - - Women’s Lives Matter - Die dringende Notwendigkeit für Frauen einer optimalen
     körperlichen Aktivität, um das Risiko und den Schweregrad von COVID-19-Erkrankungen
