--- a/_data/tags_en.yml
+++ b/_data/tags_en.yml
@@ -827,40 +827,6 @@ older adults:
 - - Approaches to Nutritional Screening in Patients with Coronavirus Disease 2019
     (COVID-19)
   - "/studies/2021/03/09/10.3390_ijerph18052772.html"
-Coronavirus:
-- - Vitamin D3 and K2 and their potential contribution to reducing the COVID-19 mortality
-    rate
-  - "/studies_en/2020/08/05/10.1016_j.ijid.2020.07.080.html"
-- - 'Ivermectin and mortality in patients with COVID-19: A systematic review, meta-analysis,
-    and meta-regression of randomized controlled trials'
-  - "/studies/2021/06/27/10.1016_j.dsx.2021.102186.html"
-- - Effects of Vitamin D in fighting COVID-19 disease
-  - "/studies/2021/12/14/iranian-journal-of-nutrition-sciences-and-food-technology.html"
-- - 'Changes in healthcare seeking and lifestyle in old aged individuals during COVID-19
-    lockdown in Germany: the population-based AugUR study'
-  - "/studies/2022/01/08/10.1186_s12877-021-02677-x.html"
-- - The sufficient vitamin D and albumin level have a protective effect on COVID-19
-    infection
-  - "/studies/2021/07/30/10.1007_s00203-021-02482-5.html"
-- - 'Effects of adding L-arginine orally to standard therapy in patients with COVID-19:
-    A randomized, double-blind, placebo-controlled, parallel-group trial. Results
-    of the first interim analysis'
-  - "/studies/2021/09/09/10.1016_j.eclinm.2021.101125.html"
-- - 'TMPRSS2: A potential target for treatment of influenza virus and coronavirus
-    infections'
-  - "/studies/2017/08/01/10.1016_j.biochi.2017.07.016.html"
-- - Role of vitamins and minerals as immunity boosters in COVID-19
-  - "/studies/2021/06/10/10.1007_s10787-021-00826-7.html"
-- - Vitamins and other immune-supportive elements as cofactors for passing the COVID-19
-    pandemic
-  - "/studies/2021/10/29/10.1186_s43088-021-00163-2.html"
-- - New diagnosis of multiple sclerosis in the setting of mRNA COVID-19 vaccine exposure
-  - "/studies/2021/12/09/10.1016_j.jneuroim.2021.577785.html"
-- - Ultraviolet radiation, vitamin D, and COVID-19
-  - "/studies/2021/04/29/10.23736_S2784-8671.21.06833-4.html"
-- - 'Nutritional approach for increasing public health during pandemic of COVID-19:
-    A comprehensive review of antiviral nutrients and nutraceuticals'
-  - "/studies/2021/05/19/10.34172_hpp.2021.17.html"
 Immunology:
 - - Vitamin D3 and K2 and their potential contribution to reducing the COVID-19 mortality
     rate
@@ -1439,82 +1405,6 @@ Azithromycin:
 barriers:
 - - Placing a Well-Designed Vegan Diet for Slovenes
   - "/studies_en/2021/12/18/10.3390_nu13124545.html"
-coronavirus:
-- - Placing a Well-Designed Vegan Diet for Slovenes
-  - "/studies_en/2021/12/18/10.3390_nu13124545.html"
-- - Vitamine D and Covid-19
-  - "/studies/2021/02/15/10.1016_j.actpha.2021.02.012.html"
-- - 'Potential Natural Products Against Respiratory Viruses: A Perspective to Develop
-    Anti-COVID-19 Medicines'
-  - "/studies/2021/02/17/10.3389_fphar.2020.586993.html"
-- - Cardiovascular magnetic resonance findings in non-hospitalized paediatric patients
-    after recovery from COVID-19
-  - "/studies/2021/10/27/10.1002_ehf2.13678.html"
-- - 'Moving Forward: Understanding Correlates of Physical Activity and Sedentary Behaviour
-    during COVID-19—An Integrative Review and Socioecological Approach'
-  - "/studies/2021/10/17/10.3390_ijerph182010910.html"
-- - 'Repurposing Ivermectin for COVID-19: Molecular Aspects and Therapeutic Possibilities'
-  - "/studies/2021/03/30/10.3389_fimmu.2021.663586.html"
-- - 'Ivermectin prophylaxis used for COVID-19 reduces COVID-19 infection and mortality
-    rates: A 220,517-subject, populational-level retrospective citywide'
-  - "/studies/2021/12/11/research-gate_RG.2.2.22705.71525-1.html"
-- - Review of Evidence Available on Hesperidin-Rich Products as Potential Tools against
-    COVID-19 and Hydrodynamic Cavitation-Based Extraction as a Method of Increasing
-    Their Production
-  - "/studies/2020/05/08/10.3390_pr8050549.html"
-- - Moderate-to-vigorous intensity physical activity among adolescents in the USA
-    during the COVID-19 pandemic
-  - "/studies/2021/12/27/10.1016_j.pmedr.2021.101685.html"
-- - 'Psychological Health and Physical Activity Levels during the COVID-19 Pandemic:
-    A Systematic Review'
-  - "/studies/2020/12/15/10.3390_ijerph17249419.html"
-- - Can Optimum Solar Radiation Exposure or Supplemented Vitamin D Intake Reduce the
-    Severity of COVID-19 Symptoms?
-  - "/studies/2021/01/16/10.3390_ijerph18020740.html"
-- - Perceived restrictions during the COVID-19 pandemic by older persons in Switzerland
-  - "/studies/2022/01/10/10.1007_s16024-021-00364-w.html"
-- - Serum levels of vitamin D and immune system function in patients with COVID-19
-    admitted to intensive care unit
-  - "/studies/2022/01/15/10.1016_j.genrep.2022.101509.html"
-- - 'Tea Bioactive Modulate Innate Immunity: In Perception to COVID-19 Pandemic'
-  - "/studies/2020/10/28/10.3389_fimmu.2020.590716.html"
-- - 'Vitamins, supplements and COVID-19: a review of currently available evidence'
-  - "/studies/2021/10/06/10.7573_dic.2021-6-2.html"
-- - Vitamin D in the time of the coronavirus (COVID-19) pandemic - a clinical review
-    from a public health and public mental health perspective
-  - "/studies/2021/07/09/10.1177_20451253211027699.html"
-- - Reproductive and developmental safety of nirmatrelvir (PF-07321332), an oral SARS-CoV-2
-    Mpro inhibitor in animal models
-  - "/studies/2022/02/01/10.1016-j.reprotox.2022.01.006.html"
-- - 'Strictly regular use of ivermectin as prophylaxis for COVID-19 leads to a 90%
-    reduction in COVID-19 mortality rate, in a dose-response manner: definitive results
-    of a prospective observational study of a strictly controlled 223,128 population
-    from a city-wide program in Southern Brazil.'
-  - "/studies/2022/02/06/researchgate_358386329.html"
-- - Zinc sulfate in combination with a zinc ionophore may improve outcomes in hospitalized
-    COVID-19 patients
-  - "/studies/2020/09/15/10.1099_jmm.0.001250.html"
-- - 'Vitamin D and COVID-19: An Overview of Recent Evidence'
-  - "/studies/2021/09/29/10.3390_ijms221910559.html"
-- - 'Lung-Centric Inflammation of COVID-19: Potential Modulation by Vitamin D'
-  - "/studies/2021/06/28/10.3390_nu13072216.html"
-- - Postulated Adjuvant Therapeutic Strategies for COVID-19
-  - "/studies/2020/08/05/10.3390_jpm10030080.html"
-- - 'Sociodemographic Predictors Associated with the Willingness to Get Vaccinated
-    against COVID-19 in Peru: A Cross-Sectional Survey'
-  - "/studies/2021/12/30/10.3390_vaccines10010048.html"
-- - Micronutrient Deficiency as a Confounder in Ascertaining the Role of Obesity in
-    Severe COVID-19 Infection
-  - "/studies/2022/01/20/10.3390_ijerph19031125.html"
-- - The Role of Herbal and Nutritional Treatments in the Fight against COVID-19 and
-    Other Respiratory Tract Infections
-  - "/studies/2021/11/16/10.3390_ijerph182212001.html"
-- - Identification of 3-chymotrypsin like protease (3CLPro) inhibitors as potential
-    anti-SARS-CoV-2 agents
-  - "/studies/2021/01/20/10.1038_s42003-020-01577-x.html"
-- - 'Possible Therapeutic Effects of Adjuvant Quercetin Supplementation Against Early-Stage
-    COVID-19 Infection: A Prospective, Randomized, Controlled, and Open-Label Study'
-  - "/studies/2021/06/08/10.2147_IJGM.S318720.html"
 education:
 - - Placing a Well-Designed Vegan Diet for Slovenes
   - "/studies_en/2021/12/18/10.3390_nu13124545.html"
@@ -3783,53 +3673,73 @@ Calcium:
 Bone:
 - - 'Hypocalcemia in COVID-19: Prevalence, clinical significance and therapeutic implications'
   - "/studies_en/2021/04/13/10.1007_s11154-021-09655-z.html"
-Covid-19:
-- - 'COVID-19 in Africa: rethinking the tools to manage future pandemics'
-  - "/studies_en/2021/12/14/10.4314_ahs.v21i4.3.html"
-- - 'The association between Vitamin D and severity in Covid-19 patient: systematic
-    review'
-  - "/studies/2021/12/01/10.1016_j.clnesp.2021.09.271.html"
-- - COVID-19 mortality is associated with low Vitamin D levels in patients with risk
-    factors and/or advanced age
-  - "/studies/2021/11/23/10.1016_j.clnesp.2021.11.025.html"
-- - 'Therapies to Prevent Progression of COVID-19, Including Hydroxychloroquine, Azithromycin,
-    Zinc, and Vitamin D3 With or Without Intravenous Vitamin C: An International,
-    Multicenter, Randomized Trial'
-  - "/studies/2021/11/25/10.7759_cureus.19902.html"
-- - Preliminary Findings of mRNA Covid-19 Vaccine Safety in Pregnant Persons
-  - "/studies/2021/04/21/10.1056_NEJMoa2104983.html"
-- - Comparison of Dementia Patients Admission Rates and Dementia Characteristics Before
-    and During the COVID-19 Pandemic
-  - "/studies/2021/11/27/10.7759_cureus.19934.html"
-- - The Relationship between Physical Activity and Immune Improvement in Covid-19
-    Prevention in Sebelimbingan Village Rt.03, Pulau Laut Utara District, Kotabaru
-    Regency
-  - "/studies/2021/12/31/JNHS_ISSN_2798-1118.html"
-- - Delay in assessing vitamin D supplements and live vaccines for tuberculosis, polio,
-    and measles to protect people from Covid-19
-  - "/studies/2021/12/05/10.31219_osf.io_swc7x.html"
 Ebola:
 - - 'COVID-19 in Africa: rethinking the tools to manage future pandemics'
   - "/studies_en/2021/12/14/10.4314_ahs.v21i4.3.html"
 Science Leadership in Africa:
 - - 'COVID-19 in Africa: rethinking the tools to manage future pandemics'
   - "/studies_en/2021/12/14/10.4314_ahs.v21i4.3.html"
-Vaccine:
-- - 'COVID-19 in Africa: rethinking the tools to manage future pandemics'
-  - "/studies_en/2021/12/14/10.4314_ahs.v21i4.3.html"
-- - 'Vaccine induced thrombotic thrombocytopenia: The shady chapter of a success story.'
-  - "/studies/2021/06/18/10.1016_j.metop.2021.100101.html"
-- - 'Fatal vaccine-induced immune thrombotic thrombocytopenia (VITT) post Ad26.COV2.S:
-    first documented case outside US'
-  - "/studies/2021/10/09/10.1007_s15010-021-01712-8.html"
-- - Prothrombotic immune thrombocytopenia after COVID-19 vaccination
-  - "/studies/2021/05/02/10.1016_j.ajem.2021.05.001.html"
 Preventative Health:
 - - 'COVID-19 in Africa: rethinking the tools to manage future pandemics'
   - "/studies_en/2021/12/14/10.4314_ahs.v21i4.3.html"
 Future Pandemics:
 - - 'COVID-19 in Africa: rethinking the tools to manage future pandemics'
   - "/studies_en/2021/12/14/10.4314_ahs.v21i4.3.html"
+Vaccines:
+- - 'COVID-19 in Africa: rethinking the tools to manage future pandemics'
+  - "/studies_en/2021/12/14/10.4314_ahs.v21i4.3.html"
+- - 'Vaccine induced thrombotic thrombocytopenia: The shady chapter of a success story.'
+  - "/studies/2021/06/18/10.1016_j.metop.2021.100101.html"
+- - Putative Role of Vitamin D for COVID-19 Vaccination
+  - "/studies/2021/08/20/10.3390_ijms22168988.html"
+- - Considerations in boosting COVID-19 vaccine immune responses
+  - "/studies/2021/09/13/10.1016_S0140-6736(21)02046-8.html"
+- - 'Fatal vaccine-induced immune thrombotic thrombocytopenia (VITT) post Ad26.COV2.S:
+    first documented case outside US'
+  - "/studies/2021/10/09/10.1007_s15010-021-01712-8.html"
+- - Pathophysiology of Vaccine-Induced Prothrombotic Immune Thrombocytopenia (VIPIT)
+    and Vaccine-Induced Thrombocytopenic Thrombosis (VITT) and Their Diagnostic Approach
+    in Emergency.
+  - "/studies/2021/09/22/10.3390_medicina57100997.html"
+- - Immune imprinting, breadth of variant recognition, and germinal center response
+    in human SARS-CoV-2 infection and vaccination
+  - "/studies/2022/01/24/10.1016-j.cell.2022.01.018.html"
+- - 'SARS-CoV-2 vaccine-associated-tinnitus: A review'
+  - "/studies/2022/01/25/10.1016_j.amsu.2022.103293.html"
+- - Painless thyroiditis following mRNA vaccination for COVID-19
+  - "/studies/2022/01/15/10.1007_s42000-021-00346-7.html"
+- - 'Cutting Edge: Circulating Exosomes with COVID Spike Protein Are Induced by BNT162b2
+    (Pfizer–BioNTech) Vaccination prior to Development of Antibodies: A Novel Mechanism
+    for Immune Activation by mRNA Vaccines'
+  - "/studies/2021/10/15/10.4049_jimmunol.2100637.html"
+- - Multisystem Inflammatory Syndrome after Ad26.COV2.S vaccination
+  - "/studies/2022/01/21/10.1016_j.idcr.2022.e01411.html"
+- - 'Symptomatic SARS-CoV-2 infections after full schedule BNT162b2 vaccination in
+    seropositive healthcare workers: a case series from a single institution'
+  - "/studies/2021/06/09/10.1080_22221751.2021.1942230.html"
+- - 'Serious complications of COVID-19 vaccines: A mini-review'
+  - "/studies/2021/10/30/10.1016_j.metop.2021.100145.html"
+- - 'Sociodemographic Predictors Associated with the Willingness to Get Vaccinated
+    against COVID-19 in Peru: A Cross-Sectional Survey'
+  - "/studies/2021/12/30/10.3390_vaccines10010048.html"
+- - 'A review: Antibody-dependent enhancement in COVID-19: The not so friendly side
+    of antibodies'
+  - "/studies/2021/10/10/10.1177_20587384211050199.html"
+- - Molecular Bases for Pharmacotherapy of COVID -19
+  - "/studies/2021/05/01/medical-and-clinical-research_ISSN_2577-8005.html"
+- - Myocarditis following COVID-19 vaccination – A case series
+  - "/studies/2021/10/08/10.1016_j.vaccine.2021.09.004.html"
+- - Relationship between Vitamin D Status and Antibody Response to COVID-19 mRNA Vaccination
+    in Healthy Adults
+  - "/studies/2021/11/18/10.3390_biomedicines9111714.html"
+- - Principles for optimization and validation of mRNA lipid nanoparticle vaccines
+    against COVID-19 using 3D bioprinting
+  - "/studies/2022/01/21/10.1016_j.nantod.2022.101403.html"
+- - Prothrombotic immune thrombocytopenia after COVID-19 vaccination
+  - "/studies/2021/05/02/10.1016_j.ajem.2021.05.001.html"
+- - SARS–CoV–2 Spike Impairs DNA Damage Repair and Inhibits V(D)J Recombination In
+    Vitro
+  - "/studies/2021/10/13/10.3390_v13102056.html"
 Anti spike neutralising antibodies:
 - - Role of Vitamin D in COVID Vaccine Efficiacy in Elderly in Indian Population
   - "/studies_en/2021/09/01/10.36106_ijar_9004485.html"
@@ -5000,37 +4910,6 @@ adaptive immunity:
 - - Immunological Aspects of SARS-CoV-2 Infection and the Putative Beneficial Role
     of Vitamin-D
   - "/studies/2021/05/16/10.3390_ijms22105251.html"
-vaccine:
-- - Putative Role of Vitamin D for COVID-19 Vaccination
-  - "/studies_en/2021/08/20/10.3390_ijms22168988.html"
-- - Considerations in boosting COVID-19 vaccine immune responses
-  - "/studies/2021/09/13/10.1016_S0140-6736(21)02046-8.html"
-- - Pathophysiology of Vaccine-Induced Prothrombotic Immune Thrombocytopenia (VIPIT)
-    and Vaccine-Induced Thrombocytopenic Thrombosis (VITT) and Their Diagnostic Approach
-    in Emergency.
-  - "/studies/2021/09/22/10.3390_medicina57100997.html"
-- - Immune imprinting, breadth of variant recognition, and germinal center response
-    in human SARS-CoV-2 infection and vaccination
-  - "/studies/2022/01/24/10.1016-j.cell.2022.01.018.html"
-- - 'Cutting Edge: Circulating Exosomes with COVID Spike Protein Are Induced by BNT162b2
-    (Pfizer–BioNTech) Vaccination prior to Development of Antibodies: A Novel Mechanism
-    for Immune Activation by mRNA Vaccines'
-  - "/studies/2021/10/15/10.4049_jimmunol.2100637.html"
-- - 'Symptomatic SARS-CoV-2 infections after full schedule BNT162b2 vaccination in
-    seropositive healthcare workers: a case series from a single institution'
-  - "/studies/2021/06/09/10.1080_22221751.2021.1942230.html"
-- - 'Sociodemographic Predictors Associated with the Willingness to Get Vaccinated
-    against COVID-19 in Peru: A Cross-Sectional Survey'
-  - "/studies/2021/12/30/10.3390_vaccines10010048.html"
-- - 'A review: Antibody-dependent enhancement in COVID-19: The not so friendly side
-    of antibodies'
-  - "/studies/2021/10/10/10.1177_20587384211050199.html"
-- - Relationship between Vitamin D Status and Antibody Response to COVID-19 mRNA Vaccination
-    in Healthy Adults
-  - "/studies/2021/11/18/10.3390_biomedicines9111714.html"
-- - SARS–CoV–2 Spike Impairs DNA Damage Repair and Inhibits V(D)J Recombination In
-    Vitro
-  - "/studies/2021/10/13/10.3390_v13102056.html"
 selenium deficiency:
 - - Selenium Deficiency Due to Diet, Pregnancy, Severe Illness, or COVID-19-A Preventable
     Trigger for Autoimmune Disease
@@ -5990,10 +5869,6 @@ Moderna:
 - - Immune imprinting, breadth of variant recognition, and germinal center response
     in human SARS-CoV-2 infection and vaccination
   - "/studies_en/2022/01/24/10.1016-j.cell.2022.01.018.html"
-Astra Zeneca:
-- - Immune imprinting, breadth of variant recognition, and germinal center response
-    in human SARS-CoV-2 infection and vaccination
-  - "/studies_en/2022/01/24/10.1016-j.cell.2022.01.018.html"
 ChAdOx1-S:
 - - Immune imprinting, breadth of variant recognition, and germinal center response
     in human SARS-CoV-2 infection and vaccination
@@ -6040,6 +5915,12 @@ lymph node germinal center:
 - - Immune imprinting, breadth of variant recognition, and germinal center response
     in human SARS-CoV-2 infection and vaccination
   - "/studies_en/2022/01/24/10.1016-j.cell.2022.01.018.html"
+AstraZeneca:
+- - Immune imprinting, breadth of variant recognition, and germinal center response
+    in human SARS-CoV-2 infection and vaccination
+  - "/studies_en/2022/01/24/10.1016-j.cell.2022.01.018.html"
+- - Perspectives on vaccine induced thrombotic thrombocytopenia
+  - "/studies/2021/05/18/10.1016_j.jaut.2021.102663.html"
 Influenza virus:
 - - 'TMPRSS2: A potential target for treatment of influenza virus and coronavirus
     infections'
@@ -6116,22 +5997,6 @@ Vitamin:
     the Immune System Against COVID-19 and the Role of Cow’s Milk in the Supply of
     These Nutrients
   - "/studies/2021/11/27/10.1007_s12011-021-03045-x.html"
-Vaccines:
-- - 'SARS-CoV-2 vaccine-associated-tinnitus: A review'
-  - "/studies_en/2022/01/25/10.1016_j.amsu.2022.103293.html"
-- - Painless thyroiditis following mRNA vaccination for COVID-19
-  - "/studies/2022/01/15/10.1007_s42000-021-00346-7.html"
-- - Multisystem Inflammatory Syndrome after Ad26.COV2.S vaccination
-  - "/studies/2022/01/21/10.1016_j.idcr.2022.e01411.html"
-- - 'Serious complications of COVID-19 vaccines: A mini-review'
-  - "/studies/2021/10/30/10.1016_j.metop.2021.100145.html"
-- - Molecular Bases for Pharmacotherapy of COVID -19
-  - "/studies/2021/05/01/medical-and-clinical-research_ISSN_2577-8005.html"
-- - Myocarditis following COVID-19 vaccination – A case series
-  - "/studies/2021/10/08/10.1016_j.vaccine.2021.09.004.html"
-- - Principles for optimization and validation of mRNA lipid nanoparticle vaccines
-    against COVID-19 using 3D bioprinting
-  - "/studies/2022/01/21/10.1016_j.nantod.2022.101403.html"
 mRNA:
 - - 'SARS-CoV-2 vaccine-associated-tinnitus: A review'
   - "/studies_en/2022/01/25/10.1016_j.amsu.2022.103293.html"
@@ -6854,10 +6719,6 @@ respiratory distress syndrome:
   - "/studies_en/2021/12/22/10.3389_fmolb.2021.632290.html"
 - - Vitamin D Status and SARS-CoV-2 Infection and COVID-19 Clinical Outcomes
   - "/studies/2021/12/22/10.3389_fpubh.2021.736665.html"
-covid-19:
-- - Zinc sulfate in combination with a zinc ionophore may improve outcomes in hospitalized
-    COVID-19 patients
-  - "/studies_en/2020/09/15/10.1099_jmm.0.001250.html"
 ionophore:
 - - Zinc sulfate in combination with a zinc ionophore may improve outcomes in hospitalized
     COVID-19 patients
@@ -8926,12 +8787,6 @@ mineral:
 nutrient:
 - - Toxicity of Food Supplements as An Adjuvant for COVID-19 Treatment or Prevention
   - "/studies_en/2022/01/01/10.11594-jtls.12.01.04.html"
-AstraZeneca:
-- - Perspectives on vaccine induced thrombotic thrombocytopenia
-  - "/studies_en/2021/05/18/10.1016_j.jaut.2021.102663.html"
-AstraZeneca vaccine:
-- - Perspectives on vaccine induced thrombotic thrombocytopenia
-  - "/studies_en/2021/05/18/10.1016_j.jaut.2021.102663.html"
 ChAdOx1 nCoV-19:
 - - Perspectives on vaccine induced thrombotic thrombocytopenia
   - "/studies_en/2021/05/18/10.1016_j.jaut.2021.102663.html"
