--- a/_data/tags_de.yml
+++ b/_data/tags_de.yml
@@ -2335,10 +2335,24 @@ Impfung:
 - - 'Zink und virale Infektionen der Atemwege: Wichtiges Spurenelement für die antivirale
     Reaktion und die Immunregulation'
   - "/studies/2021/08/09/10.1007_s12011-021-02859-z.html"
+- - Prothrombotische Immunthrombozytopenie nach COVID-19-Impfung
+  - "/studies/2021/07/29/10.1182_blood.2021011958.html"
+- - 'Wirksamkeit der Covid-19-Impfung gegen das Risiko einer symptomatischen Infektion,
+    eines Krankenhausaufenthalts und des Todes bis zu 9 Monaten: Eine schwedische
+    Kohortenstudie an der Gesamtbevölkerung'
+  - "/studies/2021/10/25/10.2139_ssrn.3949410.html"
+- - 'Spontanes HIT-Syndrom: Kniegelenkersatz, Infektion und Parallelen zur impfstoffinduzierten
+    immunthrombotischen Thrombozytopenie'
+  - "/studies/2021/06/08/0.1016_j.thromres.2021.05.018.html"
 - - 'Fallbericht: Akute fulminante Myokarditis und kardiogener Schock nach Impfung
     gegen Messenger-RNA-Coronavirus-Krankheit 2019, die eine extrakorporale kardiopulmonale
     Wiederbelebung erforderte'
   - "/studies/2021/10/29/10.3389_fcvm.2021.758996.html"
+- - 'Zerebrale Venenthrombose nach Impfung gegen COVID-19 im Vereinigten Königreich:
+    eine multizentrische Kohortenstudie'
+  - "/studies/2021/08/06/10.1016_S0140-6736(21)01608-1.html"
+- - Notwendigkeit der COVID-19-Impfung bei zuvor bereits infizierten Personen
+  - "/studies/2021/06/19/10.1101_2021.06.01.21258176.html"
 - - Warum impfen wir Kinder gegen COVID-19?
   - "/studies/2021/09/14/10.1016_j.toxrep.2021.08.010.html"
 - - 'Soziodemografische Prädiktoren im Zusammenhang mit der Bereitschaft zur Impfung
@@ -2360,9 +2374,6 @@ Impfung:
     und Impfung
   - "/studies/2021/10/08/10.1126_science.abh1823.html"
 Comirnaty:
-- - Todesfälle im Zusammenhang mit der neu eingeführten SARS-CoV-2-Impfung (Comirnaty®)
-  - "/studies/2021/04/17/10.1016_j.legalmed.2021.101895.html"
-COVID-19 Impfung:
 - - Todesfälle im Zusammenhang mit der neu eingeführten SARS-CoV-2-Impfung (Comirnaty®)
   - "/studies/2021/04/17/10.1016_j.legalmed.2021.101895.html"
 Autopsie:
@@ -4628,6 +4639,8 @@ Infektion:
   - "/studies/2021/06/08/0.1016_j.thromres.2021.05.018.html"
 - - 'Vitamin D und COVID-19: Ein Überblick über die jüngste Evidenz'
   - "/studies/2021/09/29/10.3390_ijms221910559.html"
+- - Notwendigkeit der COVID-19-Impfung bei zuvor bereits infizierten Personen
+  - "/studies/2021/06/19/10.1101_2021.06.01.21258176.html"
 - - Zusammenhänge zwischen Vitamin-D-Status, Vitamin-D-Zufuhr und dem Risiko einer
     SARS-CoV-2-Infektion und dem Schweregrad der Coronavirus-Erkrankung 2019
   - "/studies/2021/12/03/10.1093_ajcn_nqab389.html"
@@ -6063,24 +6076,9 @@ Atemwegserkrankungen:
 zellfreier DNA-Marker:
 - - 'Zellfreie DNA: Mögliche Anwendung in der COVID-19-Diagnostik und -Behandlung'
   - "/studies/2022/02/04/10.3390-v14020321.html"
-prothrombotische Immunthrombozytopenie:
+Prothrombotische Immunthrombozytopenie:
 - - Prothrombotische Immunthrombozytopenie nach COVID-19-Impfung
   - "/studies/2021/07/29/10.1182_blood.2021011958.html"
-COVID-19-Impfung:
-- - Prothrombotische Immunthrombozytopenie nach COVID-19-Impfung
-  - "/studies/2021/07/29/10.1182_blood.2021011958.html"
-- - 'Wirksamkeit der Covid-19-Impfung gegen das Risiko einer symptomatischen Infektion,
-    eines Krankenhausaufenthalts und des Todes bis zu 9 Monaten: Eine schwedische
-    Kohortenstudie an der Gesamtbevölkerung'
-  - "/studies/2021/10/25/10.2139_ssrn.3949410.html"
-- - 'Spontanes HIT-Syndrom: Kniegelenkersatz, Infektion und Parallelen zur impfstoffinduzierten
-    immunthrombotischen Thrombozytopenie'
-  - "/studies/2021/06/08/0.1016_j.thromres.2021.05.018.html"
-- - 'Zerebrale Venenthrombose nach Impfung gegen COVID-19 im Vereinigten Königreich:
-    eine multizentrische Kohortenstudie'
-  - "/studies/2021/08/06/10.1016_S0140-6736(21)01608-1.html"
-- - Notwendigkeit der COVID-19-Impfung bei zuvor bereits infizierten Personen
-  - "/studies/2021/06/19/10.1101_2021.06.01.21258176.html"
 Lagevrio:
 - - 'Molnupiravir: ein Virostatikum zur Prävention schwerer COVID-19'
   - "/studies/2022/01/20/10.1002_psb.1963.html"
@@ -7418,9 +7416,6 @@ Regulierung der Zytokinantwort:
 - - 'Die Rolle von Vitamin D im Zeitalter von COVID-19: Eine systematische Überprüfung
     und Meta-Analyse'
   - "/studies/2021/07/29/10.1111_ijcp.14675.html"
-COVID-19-Infektion:
-- - Notwendigkeit der COVID-19-Impfung bei zuvor bereits infizierten Personen
-  - "/studies/2021/06/19/10.1101_2021.06.01.21258176.html"
 Inzidenz:
 - - Notwendigkeit der COVID-19-Impfung bei zuvor bereits infizierten Personen
   - "/studies/2021/06/19/10.1101_2021.06.01.21258176.html"
