--- a/_data/tags_en.yml
+++ b/_data/tags_en.yml
@@ -1901,6 +1901,19 @@ Vaccination:
 - - 'Zinc and Respiratory Viral Infections: Important Trace Element in Anti-viral
     Response and Immune Regulation '
   - "/studies/2021/08/09/10.1007_s12011-021-02859-z.html"
+- - Prothrombotic immune thrombocytopenia after COVID-19 vaccination
+  - "/studies/2021/07/29/10.1182_blood.2021011958.html"
+- - 'Effectiveness of Covid-19 Vaccination Against Risk of Symptomatic Infection,
+    Hospitalization, and Death Up to 9 Months: A Swedish Total-Population Cohort Study'
+  - "/studies/2021/10/25/10.2139_ssrn.3949410.html"
+- - 'Spontaneous HIT syndrome: Knee replacement, infection, and parallels with vaccine-induced
+    immune thrombotic thrombocytopenia'
+  - "/studies/2021/06/08/0.1016_j.thromres.2021.05.018.html"
+- - 'Cerebral venous thrombosis after vaccination against COVID-19 in the UK: a multicentre
+    cohort study'
+  - "/studies/2021/08/06/10.1016_S0140-6736(21)01608-1.html"
+- - Necessity of COVID-19 vaccination in previously infected individuals
+  - "/studies/2021/06/19/10.1101_2021.06.01.21258176.html"
 - - Spectrum of neurological complications following COVID-19 vaccination
   - "/studies/2021/10/30/10.1007_s10072-021-05662-9.html"
 - - Perspectives on vaccine induced thrombotic thrombocytopenia
@@ -1911,9 +1924,6 @@ Comirnaty:
 - - Epidemiology of Acute Myocarditis/Pericarditis in Hong Kong Adolescents Following
     Comirnaty Vaccination
   - "/studies/2021/11/28/10.1093_cid_ciab989.html"
-COVID-19 vaccine:
-- - Deaths associated with newly launched SARS-CoV-2 vaccination (Comirnaty®)
-  - "/studies_en/2021/04/17/10.1016_j.legalmed.2021.101895.html"
 Autopsy:
 - - Deaths associated with newly launched SARS-CoV-2 vaccination (Comirnaty®)
   - "/studies_en/2021/04/17/10.1016_j.legalmed.2021.101895.html"
@@ -4781,6 +4791,8 @@ Infection:
 - - 'Spontaneous HIT syndrome: Knee replacement, infection, and parallels with vaccine-induced
     immune thrombotic thrombocytopenia'
   - "/studies/2021/06/08/0.1016_j.thromres.2021.05.018.html"
+- - Necessity of COVID-19 vaccination in previously infected individuals
+  - "/studies/2021/06/19/10.1101_2021.06.01.21258176.html"
 - - Pre-existing polymerase-specific T cells expand in abortive seronegative SARS-CoV-2
   - "/studies/2021/11/10/10.1038_s41586-021-04186-8.html"
 Asia:
@@ -5510,23 +5522,9 @@ respiratory illness:
 cell-free DNA marker:
 - - 'Cell-Free DNA: Potential Application in COVID-19 Diagnostics and Management'
   - "/studies_en/2022/02/04/10.3390-v14020321.html"
-prothrombotic immune thrombocytopenia:
+Prothrombotic Immune Thrombocytopenia:
 - - Prothrombotic immune thrombocytopenia after COVID-19 vaccination
   - "/studies_en/2021/07/29/10.1182_blood.2021011958.html"
-COVID-19 vaccination:
-- - Prothrombotic immune thrombocytopenia after COVID-19 vaccination
-  - "/studies_en/2021/07/29/10.1182_blood.2021011958.html"
-- - 'Effectiveness of Covid-19 Vaccination Against Risk of Symptomatic Infection,
-    Hospitalization, and Death Up to 9 Months: A Swedish Total-Population Cohort Study'
-  - "/studies/2021/10/25/10.2139_ssrn.3949410.html"
-- - 'Spontaneous HIT syndrome: Knee replacement, infection, and parallels with vaccine-induced
-    immune thrombotic thrombocytopenia'
-  - "/studies/2021/06/08/0.1016_j.thromres.2021.05.018.html"
-- - 'Cerebral venous thrombosis after vaccination against COVID-19 in the UK: a multicentre
-    cohort study'
-  - "/studies/2021/08/06/10.1016_S0140-6736(21)01608-1.html"
-- - Necessity of COVID-19 vaccination in previously infected individuals
-  - "/studies/2021/06/19/10.1101_2021.06.01.21258176.html"
 Lagevrio:
 - - 'Molnupiravir: an antiviral for the prevention of severe COVID-19'
   - "/studies_en/2022/01/20/10.1002_psb.1963.html"
@@ -5557,19 +5555,19 @@ Clinical trial:
     A randomized, double-blind, placebo-controlled, parallel-group trial. Results
     of the first interim analysis'
   - "/studies_en/2021/09/09/10.1016_j.eclinm.2021.101125.html"
-effectiveness:
+Effectiveness:
 - - 'Effectiveness of Covid-19 Vaccination Against Risk of Symptomatic Infection,
     Hospitalization, and Death Up to 9 Months: A Swedish Total-Population Cohort Study'
   - "/studies_en/2021/10/25/10.2139_ssrn.3949410.html"
-risk of symptomatic infection:
+Risk Of Symptomatic Infection:
 - - 'Effectiveness of Covid-19 Vaccination Against Risk of Symptomatic Infection,
     Hospitalization, and Death Up to 9 Months: A Swedish Total-Population Cohort Study'
   - "/studies_en/2021/10/25/10.2139_ssrn.3949410.html"
-risk of hospitalization:
+Risk Of Hospitalization:
 - - 'Effectiveness of Covid-19 Vaccination Against Risk of Symptomatic Infection,
     Hospitalization, and Death Up to 9 Months: A Swedish Total-Population Cohort Study'
   - "/studies_en/2021/10/25/10.2139_ssrn.3949410.html"
-risk of death:
+Risk Of Death:
 - - 'Effectiveness of Covid-19 Vaccination Against Risk of Symptomatic Infection,
     Hospitalization, and Death Up to 9 Months: A Swedish Total-Population Cohort Study'
   - "/studies_en/2021/10/25/10.2139_ssrn.3949410.html"
@@ -6395,7 +6393,7 @@ Chlorhexidine:
 - - 'The effectiveness of mouthwash against SARS-CoV-2 infection: A review of scientific
     and clinical evidence'
   - "/studies_en/2021/10/08/10.1016_j.jfma.2021.10.001.html"
-Cerebral venous thrombosis:
+Cerebral Venous Thrombosis:
 - - 'Cerebral venous thrombosis after vaccination against COVID-19 in the UK: a multicentre
     cohort study'
   - "/studies_en/2021/08/06/10.1016_S0140-6736(21)01608-1.html"
@@ -7026,9 +7024,6 @@ Weather:
 cytokine response regulation:
 - - 'The role of vitamin D in the age of COVID-19: A systematic review and meta-analysis'
   - "/studies_en/2021/07/29/10.1111_ijcp.14675.html"
-COVID-19 infection:
-- - Necessity of COVID-19 vaccination in previously infected individuals
-  - "/studies_en/2021/06/19/10.1101_2021.06.01.21258176.html"
 incidence:
 - - Necessity of COVID-19 vaccination in previously infected individuals
   - "/studies_en/2021/06/19/10.1101_2021.06.01.21258176.html"
